1.2/base/manifests/backend-todos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-todos
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-todos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend-todos
    spec:
      containers:
        - name: backend-todos
          image: PROJECT/backend-todos
          readinessProbe:
            httpGet:
              path: /ready
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 3001
