1.2/base/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: project
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
