1.2/base/manifests/backend-todos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-todos-svc
  namespace: project
spec:
  selector:
    app: backend-todos
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
